@@ -32,6 +32,7 @@ procps-ng-NEXT
   * ps: Add -o pcap,pcaps to show permitted capabilities
   * slabtop: Add --human option for slab size
   * sysctl: Add glob excludes                              merge #206
+  * sysctl: --all skips stat_refresh                       Debian #978688
   * top: added a 'CLS' scheduling class field, like ps
   * top: exploit library addition of 'disk sleep'          issue #265
   * top: add 'docker' containers field, similar to 'lxc'
